fix form input focus & overflow

--- a/src/molecules/footer/Footer.scss
+++ b/src/molecules/footer/Footer.scss
@@ -2,12 +2,15 @@
     background: transparent linear-gradient(261deg, #2F80ED 0%, #00C8AA 100%) 0% 0% no-repeat padding-box;
     opacity: 1;
     height: 200px;
-    padding: 10px 143px;
+    padding: 10px 10vw;
     color: #FFFFFF;
     display: flex;
     align-items: center;
     justify-content: space-between;
     overflow: hidden;
+    @media only screen and (max-width: 1289px) {
+        height: auto;
+    }
     &*{
         overflow: hidden;
     }
@@ -15,18 +18,15 @@
         animation-duration: 1s;
         display: flex;
         align-items: center;
-        width: 100vw;
+        width: 100%;
         justify-content: space-between;
         height: 100%;
         opacity: 1;
         @media only screen and (max-width: 1289px) {
-        flex-direction: column;
+            flex-direction: column;
+            height: auto;
+            padding: 30px 0;
         }
-    }
-    @media only screen and (max-width: 1289px) {
-        flex-direction: column;
-        height: auto;
-        padding: 30px 0;
     }
     .logo {
         figure {
@@ -59,7 +59,7 @@
     .about-us {
         margin-right: 200px;
         @media only screen and (max-width: 1289px) {
-            width: 100vw;
+            width: 100%;
             margin: 0;
             text-align: center;
         }
@@ -78,6 +78,9 @@
             .animated {
                 opacity: 1 !important;
             }
+        }
+        .title{
+            padding-left: 5px;
         }
         ul{
             list-style-type: none;
