--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -44,5 +44,15 @@ html {
         input:focus, button:focus{
             outline: none;
         }
+        input:focus{
+            border: 2px solid #2491DD !important;
+            box-shadow: 0px 3px 6px #0B908629 !important;
+            height: 20px !important;
+            padding-left: 43px !important;
+            @media only screen and (max-width: 1289px) {
+                height: 12px !important;
+                padding-left: 23px !important;
+            }
+        }
     }
 }
